参数整理