@@ -1,5 +1,6 @@
 package com.datafusion.agent.runtime;
 
+import com.datafusion.agent.config.AgentProperties;
 import com.datafusion.common.utils.JacksonUtils;
 import com.datafusion.scheduler.model.Worker;
 import lombok.extern.slf4j.Slf4j;
@@ -8,7 +9,6 @@ import org.springframework.stereotype.Component;
 import java.io.File;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 /**
  * Agent worker 本地配置存储.
@@ -22,10 +22,18 @@ import java.nio.file.Paths;
 public class AgentWorkerConfigStore {
 
     /**
-     * 默认 worker 配置文件.
+     * worker 配置文件.
      */
-    private static final Path WORKER_CONFIG_PATH = Paths.get(
-            "/opt/datafusion-builtin/datafusion-agent/worker.config");
+    private final Path workerConfigPath;
+
+    /**
+     * 构造函数.
+     *
+     * @param properties agent 配置
+     */
+    public AgentWorkerConfigStore(AgentProperties properties) {
+        this.workerConfigPath = Path.of(properties.getWorker().getWorkerConfigPath());
+    }
 
     /**
      * 读取本地 worker 配置.
@@ -33,14 +41,14 @@ public class AgentWorkerConfigStore {
      * @return worker 配置
      */
     public Worker load() {
-        File file = WORKER_CONFIG_PATH.toFile();
+        File file = workerConfigPath.toFile();
         if (!file.exists()) {
             return null;
         }
         try {
             return JacksonUtils.file2Bean(file, Worker.class);
         } catch (Exception e) {
-            log.warn("读取 worker 本地配置失败, path={}", WORKER_CONFIG_PATH, e);
+            log.warn("读取 worker 本地配置失败, path={}", workerConfigPath, e);
             return null;
         }
     }
@@ -55,10 +63,10 @@ public class AgentWorkerConfigStore {
             return;
         }
         try {
-            Files.createDirectories(WORKER_CONFIG_PATH.getParent());
-            JacksonUtils.obj2File(WORKER_CONFIG_PATH.toFile(), worker);
+            Files.createDirectories(workerConfigPath.getParent());
+            JacksonUtils.obj2File(workerConfigPath.toFile(), worker);
         } catch (Exception e) {
-            log.warn("保存 worker 本地配置失败, path={}", WORKER_CONFIG_PATH, e);
+            log.warn("保存 worker 本地配置失败, path={}", workerConfigPath, e);
         }
     }
 }
